# exhibition-congestion-prediction

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md
.github/workflows/: claude-code-review.yml  deploy.yml
backend/: .env.example  pyproject.toml
backend/app/: cache.py  collector.py  config.py  db.py  main.py  mmca_api.py  models.py  scheduler.py  schemas.py  seoul_api.py
backend/app/prediction/: baseline.py  batch.py  model.py
backend/app/routes/: congestion.py  mmca.py  prediction.py  stream.py
backend/scripts/: migrate_add_population_fields.py  migrate_add_raw_response.py
backend/tests/: conftest.py  test_baseline.py  test_batch.py  test_cache.py  test_collector.py  test_config.py  test_db_models.py  test_mmca_api.py  test_model.py  test_routes_congestion.py  test_routes_mmca.py  test_routes_prediction.py  test_routes_stream.py  test_scheduler.py  test_seoul_api.py
deploy/: deploy.sh
docs/superpowers/plans/: 2026-07-15-congestion-card-visual-refresh.md  2026-07-15-exhibition-congestion-prediction-plan.md  2026-07-16-daily-congestion-log.md  2026-07-24-mmca-congestion-collector.md  2026-07-24-venue-pages.md
docs/superpowers/specs/: 2026-07-16-daily-congestion-log-design.md  (+4 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/e2e/: congestion.spec.ts
frontend/src/: App.tsx  index.css  venues.ts
frontend/tests/: CongestionCard.test.tsx  DailyLogTable.test.tsx  HomePage.test.tsx  MmcaPage.test.tsx  PredictionChart.test.tsx  RoomCongestionCard.test.tsx  useCongestionStream.test.ts
(+11 files in other folders)
