[project]
name = "exhibition-congestion-prediction"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "pg8000>=1.31",
    "redis>=5.0",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "scikit-learn>=1.5",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "fakeredis>=2.23",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
pythonpath = ["."]
